--- a/src/components/Gutenberg/FreeForm/styles.scss
+++ b/src/components/Gutenberg/FreeForm/styles.scss
@@ -11,4 +11,10 @@
   .aligncenter {
     margin: 0 auto;
   }
+  &-old > * {
+    & > * {
+      text-align: left !important;
+    }
+    text-align: left !important;
+  }
 }
