--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -138,7 +138,7 @@
 
       position: absolute;
       bottom: 30px;
-      right: 20px;
+      right: 40px;
 
       border: none;
       background: transparent;
